# Fetcher

./: .gitignore  Cargo.toml  README.txt  install.sh  uninstall.sh
cli/: Cargo.toml
cli/src/: app.rs  main.rs  ui.rs
core/: Cargo.toml
core/examples/: verify.rs
core/src/: actions.rs  lib.rs  performance.rs  processes.rs  sampler.rs  services.rs  startup.rs  util.rs
gui/: Cargo.toml
gui/src/: app.rs  main.rs  ui.rs
