[workspace]
resolver = "2"
members = ["core", "cli", "gui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
sysinfo = { version = "0.32", default-features = false, features = ["system", "disk", "network", "user"] }
nix = { version = "0.29", default-features = false, features = ["signal", "user"] }
ratatui = "0.29"
crossterm = "0.28"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui_plot = "0.29"
egui_extras = { version = "0.29", default-features = false }
zbus = { version = "4" }
serde = "1"
anyhow = "1"
thiserror = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pragmatic carve-outs: these pedantic lints are noisy in domain code.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
similar_names = "allow"
too_many_lines = "allow"
